# codav

./: .desktop.in  .gitignore  AUTHORS  CMakeLists.txt  Makefile.am  README  README.md  autogen.sh  config.vala.cmake  configure.ac
cmake/: FindVala.cmake
data/: Makefile.am  appmenu.ui  codav.appdata.xml.in  codav.desktop  codav.gresource.xml  com.github.cimm.codav.appdata.xml  com.github.cimm.codav.desktop
snap/: snapcraft.yaml
src/: CMakeLists.txt  Makefile.am  coda_file.vala  codav.vala  group_header.vala  transaction.vala  transaction_list.vala  window.vala
